# llm-portfolio

./: .env.example  .gitignore  README.md  pyproject.toml
notebooks/: 01_llm_fundamentals.ipynb  02_langchain_basics.ipynb
tests/: test_utils.py
utils/: config.py  embeddings.py  metrics.py  performance.py  prompts.py  text_processing.py  vector_stores.py
