[project]
name = "llm-portfolio"
version = "0.1.0"
description = ""
authors = [
    {name = "aybike alkan",email = "aybike.alkn@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sentence-transformers (>=5.2.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
black = "^25.12.0"
flake8 = "^7.3.0"

