[project]
name = "llm-portfolio"
version = "0.1.0"
description = ""
authors = [
    {name = "aybike alkan",email = "aybike.alkn@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"

dependencies = [
    "sentence-transformers (>=5.2.0,<6.0.0)",
    "tiktoken (>=0.12.0,<0.13.0)",
    "openai (>=2.12.0,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "langchain-openai (>=1.1.9,<2.0.0)",
    "langchain (>=1.2.10,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
black = "^25.12.0"
flake8 = "^7.3.0"
jupyter = "^1.1.1"
ipykernel = "^7.1.0"
